--- a/app/src/main/res/drawable/bg_nav_pill.xml
+++ b/app/src/main/res/drawable/bg_nav_pill.xml
@@ -1,6 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="100dp" />
-    <solid android:color="#1A1A1A" />
-    <stroke android:width="1dp" android:color="#33FFFFFF" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?><shape xmlns:android="http://schemas.android.com/apk/res/android"><corners android:radius="100dp"/><solid android:color="#EE1A1A1A"/><stroke android:width="1.5dp" android:color="#44FFFFFF"/></shape>
